2012-10-04 Guido Scholz <guido.scholz@bayernline.de>
	* demos/vocoder_1.ams: Add demo file for new vocoder module.

2012-09-30 Guido Scholz <guido.scholz@bayernline.de>
	* src/m_ladspa.cpp, src/mainwindow.cpp, src/modularsynth.*,
	src/port.*, src/prefwidget.*, src/synthdata.*: Make port font
	color editable.

2012-09-30 Guido Scholz <guido.scholz@bayernline.de>
	* src/midiwidget.*, src/modularsynth.*: Make control center MIDI
	settings persistent.
	* src/m_scmcv.cpp: Fix memory leak caused by not deleted file
	dialog.

2012-02-21 Guido Scholz <guido.scholz@bayernline.de>
	* src/modularsynth.cpp, src/port.*: Add context menu to
	disconnect module output ports.

2012-02-20 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp, src/msoptions.h: Rename commandline options
	"-d" (ALSA device), "-p" (Period size) and "-n" (Number of
	fragments).

2012-02-19 Guido Scholz <guido.scholz@bayernline.de>
	* src/aboutdialog.*, src/mainwindow.cpp, src/modularsynth.*: Add
	new about dialog.
	* src/modularsynth.cpp, src/module.*, src/port.*: Fix update of
	jack and cable color if modified by context menu.

2012-02-18 Guido Scholz <guido.scholz@bayernline.de>
	* demos/analog_memory_1.ams, demos/bitgrinder_1.ams,
	demos/hysteresis_1.ams, demos/vcdelay_1.ams: Add demo files for
	new modules, provided by Bill Yerazunis.
	* src/mainwindow.cpp: Restructure module menu.

2012-02-17 Guido Scholz <guido.scholz@bayernline.de>
	* src/modularsynth.cpp: Cleanup string constant handling.

2012-02-16 Guido Scholz <guido.scholz@bayernline.de>
	* src/midicontrollable.*, src/midiwidget.cpp: Use name with or
	 without keyboard shortcut control character for MIDI controller.
	* src/midicheckbox.cpp: Use self contained text for labeling.

2012-02-14 Guido Scholz <guido.scholz@bayernline.de>
	* src/module.h, src/m_vocoder.h, src/m_vocoder.cpp,
	src/modularsynth.*: Add FFT vocoder module, provided by
	Bill Yerazunis.
	* src/m_noise2.*: Add pulsetrain noise type to Noise 2 module,